--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App_Container {
-  
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+
+    /* background-color: skyblue; */
+    /* border: 4px solid blue; */
+    height: 100vh;
+    width: auto
 }
