--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,43 @@
 .Header_Container {
-    /* background-color: lightgreen; */
+    display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+
     background-color: hsl(7, 64%, 52%);
     /* border: 4px solid green; */
     height: 15vh;
     width: 100vw;
+}
+
+.Logo_Header {
+    margin-left: 1%;
+}
+
+.Title_Header {
+    margin-left: 1%;
+}
+
+.Dashboard_Link {
+    margin-left: 400px;
+    background-color: white;
+    /* border: 2px solid black; */
+    border-radius: 25px;
+    width: 6%;
+    height: 20%;
+    text-align: center;
+}
+
+.AddInventory_Link {
+    margin-left: 100px;
+    background-color: white;
+    /* border: 2px solid black; */
+    border-radius: 25px;
+    width: 6.5%;
+    height: 20%;
+    text-align: center;
+}
+
+.Link {
+    text-decoration: none;
 }
