--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -1,6 +1,59 @@
 .Product_Container {
-    background-color: lightgray;
+    display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+
+    background-color: hsl(7, 64%, 52%);
     border: 4px solid black;
-    height: 80vh;
+    border-radius: 25px;
+    height: 28vh;
     width: 40vw;
+}
+
+.Image_Product {
+    height: 25vh;
+    width: 12vw;
+    background-color: white;
+    border: 4px solid black;
+    margin-left: 2%;
+}
+
+.Content_Product {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-start;
+
+    height: 25vh;
+    width: 25vw;
+    background-color: white;
+    border: 4px solid black;
+    margin-right: 2%;
+}
+
+.Name_Product {
+    height: 6vh;
+    width: 24vw;
+    background-color: white;
+    border: 4px solid black;
+    margin-left: 1%;
+    margin-top: 1%;
+}
+
+.Price_Product {
+    height: 6vh;
+    width: 24vw;
+    background-color: white;
+    border: 4px solid black;
+    margin-left: 1%;
+}
+
+.Button_Product {
+    height: 6vh;
+    width: 24vw;
+    background-color: white;
+    border: 4px solid black;
+    margin-left: 1%;
+    margin-bottom: 1%;
 }
